# creature_evolution

./: .gitignore  CMakeLists.txt  README.md  hqqq  refactor-plan.txt
BulletHelloWorld/: CMakeLists.txt  Main.cpp
BulletHelloWorld/cmake/Modules/: FindBullet.cmake
BulletWorm/: CMakeLists.txt
BulletWorm/cmake/Modules/: FindFreeGLUT.cmake  FindGLEW.bak
BulletWorm/src/: CMakeLists.txt  Creature.cpp  Creature.h  DebugDraw.h  Environment.h  Main.cpp  Renderer.cpp  Renderer.h  Simulation.cpp  Simulation.h  WormBulletCreature.cpp  WormBulletCreature.h
BulletWormTest/: CMakeLists.txt  CMakeLists_dev.txt  DebugDraw.cpp  Main.cpp  Renderer.cpp  Renderer.h
BulletWormTest/cmake/Modules/: FindBullet.cmake  FindFreeGLUT.bak  FindFreeGLUT.cmake
BulletWormTest/src/: Creature.cpp  Creature.h  Environment.cpp  Renderer.cpp  Simulation.cpp
EvolutionHelloWorld/: .gitignore  CMakeLists.txt
EvolutionHelloWorld/include/: Chromosome.h  Creature.h  Evolution.h  Population.h
EvolutionHelloWorld/src/: Chromosome.cpp  Creature.cpp  Creature.h  CreatureEvolution.cpp  CreatureEvolution.h  Evolution.cpp  Evolution.h  HelloWorld.cpp  Population.cpp
EvolutionHelloWorld/test/: CreatureTest.cpp
GAHelloWorld/: CMakeLists.txt
GAHelloWorld/src/: Chromosome.cpp  Chromosome.h  GAHelloWorld.cpp  Population.cpp  Population.h
GAHelloWorld/test/: GA_ChromosomeTest.cpp  GA_PopulationTest.cpp
Projektrapport/: Projektrapport_template.tex
QtHelloWorld/: .gitignore  CMakeLists.txt  Main.cpp
SFGuiHelloWorld/: CMakeLists.txt
SFGuiHelloWorld/src/: CMakeLists.txt  DummyClass.cpp  Main.cpp
SFGuiHelloWorld/src/include/: DummyClass.h
SFGuiHelloWorld/test/: CMakeLists.txt
WormEvolution/: .gitignore  CMakeLists.txt
WormEvolution/cmake/Modules/: FindFreeGLUT.bak  FindGLEW.cmake
WormEvolution/include/: Creature.h  Evolution.h
WormEvolution/src/: CMakeLists.txt  Chromosome.cpp  Creature.cpp  DebugDraw.cpp  Evolution.cpp  HelloWorld.cpp  Main.cpp  Population.cpp  Renderer.cpp  Shader.cpp  Simulation.cpp  Simulation.h  WormBulletCreature.cpp
WormEvolution/src/include/: AutoInitRNG.h  CMakeLists.txt  Chromosome.h  Creature.h  DebugDraw.h  Evolution.h  Simulation.h  WormBulletCreature.h
WormEvolution/test/: ChromosomeTest.cpp  CreatureTest.cpp
cmake/Modules/: FindBULLET.cmake  FindGLEW.cmake
data/qml/: main.qml
data/shaders/: basic.frag  basic.vert  mvp.vert  simple.frag  simple.vert
external_libs/bullet/include/BulletDynamics/Character/: btKinematicCharacterController.cpp
external_libs/bullet/lib/msvc64/Debug/: BulletSoftBody_Debug.lib  LinearMath_Debug.lib
external_libs/bullet/lib/msvc64/Release/: BulletDynamics.lib  BulletSoftBody.lib  LinearMath.lib
external_libs/freeglut/lib/win/x64/: freeglut.lib
external_libs/glew/lib/msvc64/Debug/: glew32d.lib  glew32sd.lib
external_libs/glew/lib/msvc64/Release/: glew32.lib  glew32s.lib
external_libs/gtest-1.7.0/: CMakeLists.txt
libs/freeglut/lib/win/x64/: freeglut_d.lib
src/: AutoInitRNG.cpp  Body.cpp  Box.cpp  Brain.cpp  BulletCreature.cpp  CEMotionState.cpp  CMakeLists.txt  Camera.cpp  Creature.cpp  CreatureEvolution.cpp  DebugDraw.cpp  EvoSimulation.cpp  Evolution.cpp  EvolutionManager.cpp  GLWidget.cpp  Main.cpp  MainCEWindow.cpp  Node.cpp  OpenGLWindow.cpp  PassiveObject.cpp  Plane.cpp  Population.cpp  QtWindowManager.cpp  RenderWindow.cpp  Renderer.cpp  Scene.cpp  SceneManager.cpp  SettingsManager.cpp  Shader.cpp  ShaderManager.cpp  Shape.cpp  Simulation.cpp  SliderWidget.cpp  TextureManager.cpp  VizSimulation.cpp  WindowsManager.cpp  WormBulletCreature.cpp  transwindow.cpp
src/include/: AutoInitRNG.h  Body.h  Box.h  Brain.h  BulletCreature.h  CEMotionState.h  Camera.h  Chromosome.h  Creature.h  CreatureEvolution.h  DebugDraw.h  Entity.h  EvoSimulation.h  Evolution.h  EvolutionManager.h  GLWidget.h  MainCEWindow.h  Node.h  OpenGLWindow.h  PassiveObject.h  Plane.h  Population.h  QtWindowManager.h  RenderWindow.h  Renderer.h  Scene.h  SceneManager.h  SettingsManager.h  ShaderManager.h  Shape.h  Simulation.h  SimulationV2.h  SliderWidget.h  TextureManager.h  VizSimulation.h  WindowsManager.h  WormBulletCreature.h  transwindow.h  vec3.h
test/: NodeTest.cpp  SceneManagerTest.cpp  ShaderManagerTest.cpp  ShapeTest.cpp
